添加圆、椭圆、正方形绘制功能

--- a/drawingboard/index.html
+++ b/drawingboard/index.html
@@ -1,11 +1,8 @@
 <html>
 
 <head></head>
+<title>高级画板程序(canvas) - 授课系统</title>
 <link rel="stylesheet" href="css/index.css">
-
-<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/fabric.js/2.0.0-rc.4/fabric.js"></script>
-
 
 
 
@@ -32,7 +29,7 @@
                 <li data-type="ellipse">
                     <i class="icon-tools icon-ellipse-black" data-default='icon-tools icon-ellipse-black'></i>
                 </li>
-                <li data-type="square">
+                <li class="hide" data-type="square">
                     <i class="icon-tools icon-square-black" data-default='icon-tools icon-square-black'></i>
                 </li>
                 <li data-type="rectangle">
@@ -41,7 +38,7 @@
                 <li data-type="rightangle">
                     <i class="icon-tools icon-rightangle-black" data-default='icon-tools icon-rightangle-black'></i>
                 </li>
-                <li data-type="equilateral">
+                <li class="hide" data-type="equilateral">
                     <i class="icon-tools icon-equilateral-black" data-default='icon-tools icon-equilateral-black'></i>
                 </li>
                 <li data-type="isosceles">
@@ -61,7 +58,8 @@
         </div>
     </div>
 
-
+    <script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/fabric.js/2.0.0-rc.4/fabric.js"></script>
     <script src="js/demo.js"></script>
 </body>
 
