新增三角形系列绘图

--- a/drawingboard/index.html
+++ b/drawingboard/index.html
@@ -38,11 +38,11 @@
                 <li data-type="rightangle">
                     <i class="icon-tools icon-rightangle-black" data-default='icon-tools icon-rightangle-black'></i>
                 </li>
-                <li class="hide" data-type="equilateral">
+                <li data-type="equilateral">
                     <i class="icon-tools icon-equilateral-black" data-default='icon-tools icon-equilateral-black'></i>
                 </li>
-                <li data-type="isosceles">
-                    <i class="icon-tools icon-isosceles-black" data-default='icon-tools icon-equilateral-black'></i>
+                <li class="hide" data-type="isosceles">
+                    <i class="icon-tools icon-isosceles-black" data-default='icon-tools icon-isosceles-black'></i>
                 </li>
                 <li data-type="text">
                     <i class="icon-tools icon-text-black" data-default='icon-tools icon-text-black'></i>
@@ -59,7 +59,7 @@
     </div>
 
     <script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/fabric.js/2.0.0-rc.4/fabric.js"></script>
+    <script src="https://cdn.bootcss.com/fabric.js/2.1.0/fabric.min.js"></script>
     <script src="js/demo.js"></script>
 </body>
 
