支持画板缩放添加

--- a/drawingboard/index.html
+++ b/drawingboard/index.html
@@ -53,7 +53,7 @@
             </ul>
 
         </div>
-        <div class="canvasDiv" style="width:95%;height:150%;">
+        <div id="canvasDiv" class="canvasDiv" style="width:95%;">
             <canvas id="c" width="1920" height="1080">请使用支持HTML5的浏览器</canvas>
         </div>
     </div>
@@ -61,6 +61,8 @@
     <script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/fabric.js/2.1.0/fabric.min.js"></script>
     <script src="js/demo.js"></script>
+    <script src="js/canvasZoom.js"></script>
+
 </body>
 
 </html>
