添加作业批改

--- a/drawingboard/index.html
+++ b/drawingboard/index.html
@@ -1,10 +1,10 @@
 <html>
 
-<head></head>
-<title>高级画板程序(canvas) - 授课系统</title>
-<link rel="stylesheet" href="css/index.css">
-
-
+<head>
+    <meta charset="UTF-8">
+    <title>高级画板程序(canvas) - 授课系统</title>
+    <link rel="stylesheet" href="css/index.css">
+</head>
 
 <body style="background-color: #E5E4E5;;overflow-x: hidden;">
 
