添加上传错题到七牛云

--- a/drawingboard/check.html
+++ b/drawingboard/check.html
@@ -24,7 +24,7 @@
                 <li data-type="smallwrong" title="题目内单个错误">
                     <i class="icon-wrong-small-black" data-default='icon-wrong-small-black'></i>
                 </li>
-                <li data-type="rectangle" title="错误题圈定">
+                <li data-type="rectangle" title="错题圈定">
                     <i class="icon-tools icon-square-black" data-default="icon-tools icon-square-black"></i>
                 </li>
 
@@ -32,28 +32,40 @@
                     <i class="icon-tools icon-remove-black" data-default='icon-tools icon-remove-black'></i>
                 </li>
 
-                <li onclick="cutFun()" title="提交">
+                <li onclick="cutFun()" title="成绩查看">
                     <i class="icon-submit-black" data-default='icon-submit-black'></i>
                 </li>
             </ul>
 
         </div>
-        <div id="canvasDiv" class="canvasDiv" style="width:95%;height: auto;">
-            <canvas id="c" width="1920" height="1080">请使用支持HTML5的浏览器</canvas>
+        <div id="canvasDiv" class="canvasDiv" style="width:auto;height: auto;">
+            <canvas id="c" height="890">请使用支持HTML5的浏览器</canvas>
         </div>
+        <div style="color:red;margin-top: 10px;margin-left: 60px;">注意：错题必须使用工具栏“错题圈定”圈定错题。</div>
+        <div id="wrongImg"></div>
     </div>
 
     <script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/fabric.js/2.1.0/fabric.min.js"></script>
     <script src="js/check.js"></script>
     <script src="js/canvasZoom.js"></script>
+    <script src="https://unpkg.com/qiniu-js@2.2.2/dist/qiniu.min.js"></script>
     <script>
 
+        var qiniuToken = undefined;
+        jQuery.ajax({
+            type: "GET",
+            cache: false,
+            dataType: "jsonp",
+            url: 'http://127.0.0.1:8360/qiniu/gettoken',
+            data: {},
+            success: function (res) {
+                qiniuToken = res.token;
+            }
+        });
+
         function cutFun() {
-
-
             var objs = canvas.getObjects();
-            console.log("org objects length" + canvas.getObjects().length);
             var checkObj = [];
             for (var i = 0; i < objs.length; i++) {
                 if (objs[i].type && objs[i].type != 'image') {
@@ -61,7 +73,6 @@
                 }
             }
             checkObj.sort(function (x, y) { return x.top - y.top; }); //根据控件top排序
-            console.log(checkObj);
 
             var checkJson = [];
             var itemSmallRight = 0, itemSmallWrong = 0, prevSmallType = true;
@@ -84,44 +95,105 @@
                 if (prevSmallType == false || i == (checkObj.length - 1)) {
                     //上一个为整题对/错 || 最后一题
                     if (itemSmallRight > 0 || itemSmallWrong > 0) {
-                        checkJson.push({ 'r': 0, 'w': 0, 'sr': itemSmallRight, 'sw': itemSmallWrong });
+                        checkJson.push({ 'r': 0, 'w': 0, 'sr': itemSmallRight, 'sw': itemSmallWrong, 'url': '' });
                         itemSmallRight = 0, itemSmallWrong = 0;
                     }
                     prevSmallType = true;
                 }
                 //录入本次大题
                 if (checkObj[i].type == 'right') {
-                    checkJson.push({ 'r': 1, 'w': 0, 'sr': 0, 'sw': 0 });
+                    checkJson.push({ 'r': 1, 'w': 0, 'sr': 0, 'sw': 0, 'url': '' });
                 } else if (checkObj[i].type == 'wrong') {
-                    checkJson.push({ 'r': 0, 'w': 1, 'sr': 0, 'sw': 0 });
+                    checkJson.push({ 'r': 0, 'w': 1, 'sr': 0, 'sw': 0, 'url': '' });
+                }
+                //圈定的错图上传
+                if (checkObj[i].type == 'rectangle') {
+                    toImgUpload(checkObj[i], checkObj[i].left, checkObj[i].top, checkObj[i].width, checkObj[i].height);
                 }
             }
 
-            var msg = "";
-            for (var i = 0; i < checkJson.length; i++) {
-                msg += ("第" + (i + 1) + "题：");
-                if (checkJson[i].r) {
-                    msg += "全对";
-                } else if (checkJson[i].w) {
-                    msg += "全错";
-                } else {
-                    msg += "对：" + checkJson[i].sr + "个" + "，错：" + checkJson[i].sw + "个";
-                }
-                msg += "\n";
-            }
-            alert(msg);
-
-
-            // var dataURL = canvas.toDataURL({
-            //     format: 'png',
-            //     left: 80,
-            //     top: 80,
-            //     width: 200,
-            //     height: 200
-            // });
-            // document.write('<img src="' + dataURL + '"/>');
+            // var msg = "";
+            // for (var i = 0; i < checkJson.length; i++) {
+            //     msg += ("第" + (i + 1) + "题：");
+            //     if (checkJson[i].r) {
+            //         msg += "全对";
+            //     } else if (checkJson[i].w) {
+            //         msg += "全错";
+            //     } else {
+            //         msg += "对：" + checkJson[i].sr + "个" + "，错：" + checkJson[i].sw + "个";
+            //     }
+            //     msg += "\n";
+            // }
+            // if (msg) {
+            //     alert(msg);
+            // }
 
         }
+
+        //转换成图片并上传
+        function toImgUpload(cObj, left, top, width, height) {
+            canvas.remove(cObj);
+            var base64 = canvas.toDataURL({
+                format: 'png',
+                left: left - 12,
+                top: top - 10,
+                width: width,
+                height: height
+            });
+
+            // data:image/png;base64,
+
+            jQuery("#wrongImg").append('<img src="' + base64 + '"/><br />');
+            canvas.add(cObj);
+
+            //上传，返回地址
+            var putExtra = {
+                fname: "",
+                params: {},
+                mimeType: [] || null
+            };
+            var config = {
+                useCdnDomain: true
+            };
+            // var contentType = 'image/png';
+            // var blob = base64ToBlob(base64.replace('data:image/png;base64,', ''), contentType);
+
+            // var observable = qiniu.upload(blob, "test5.png", qiniuToken, putExtra, config);
+            // var subscription = observable.subscribe({
+            //     next(res) {
+            //         console.log(res);
+            //     },
+            //     error(err) {
+            //         console.log(err);
+            //     },
+            //     complete(res) {
+            //         console.log(res);
+            //     }
+            // });
+
+            // return "";
+        }
+
+        //base64转blob
+        function base64ToBlob(base64, contentType, sliceSize) {
+            contentType = contentType || '';
+            sliceSize = sliceSize || 512;
+            var byteCharacters = atob(base64);
+            var byteArrays = [];
+
+            for (var offset = 0; offset < byteCharacters.length; offset += sliceSize) {
+                var slice = byteCharacters.slice(offset, offset + sliceSize);
+                var byteNumbers = new Array(slice.length);
+                for (var i = 0; i < slice.length; i++) {
+                    byteNumbers[i] = slice.charCodeAt(i);
+                }
+                var byteArray = new Uint8Array(byteNumbers);
+                byteArrays.push(byteArray);
+            }
+            var blob = new Blob(byteArrays, { type: contentType });
+            return blob;
+        }
+
 
     </script>
 
